--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 hello world
 username: admin@example.com
 password: Admin123
+
+ Kiringabakwe Ibrahim, Ahimbisibwe Mubarack,bitnob,cherubin,nonso amadi
